--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Colton's Cybersecurity Projects
+description: A site dedicated to the projects I am working on or have completed in relation to Cybersecurity
